# gateway

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
db/: repository.py
docs/: architecture.md  system_prompts.md
handlers/: base_handler.py  disable_fact_pod_handler.py  enable_fact_pod_handler.py  facts_by_category_handler.py  list_of_categories_handler.py
src/gateway/: config.py  exceptions.py  main.py
src/gateway/client/: MCPclient.py  interface.py
src/gateway/clients/: __init__.py  http_client.py  openid_client.py
src/gateway/db/: __init__.py  dynamodb_repository.py  repository.py
src/gateway/handlers/: base_handler.py  disable_fact_pod_handler.py  enable_fact_pod_handler.py  facts_by_category_handler.py  list_of_categories_handler.py
src/gateway/http/: client.py
src/gateway/models/: __init__.py  fact_pod.py  oauth.py
src/gateway/models/auth/: __init__.py  jwk.py  oauth.py  openid.py
src/gateway/models/fact_pod/: __init__.py  config.py  connection.py  facts.py
src/gateway/services/: __init__.py  fact_pod_service.py
tests/: conftest.py  test_base_handler.py  test_disable_fact_pod_handler.py  test_enable_fact_pod_handler.py  test_facts_by_category_handler.py  test_list_of_categories_handler.py
tests/integration/: test_handler_registration.py
tests/unit/gateway/: test_config.py  test_main.py
tests/unit/gateway/db/: test_dynamodb_repository.py
tests/unit/gateway/handlers/: test_base_handler.py  (+4 more)
(+1 files in other folders)
