[project]
name = "gateway"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=14.3.0",
    "aiosqlite>=0.21.0",
    "boto3>=1.37.3",
    "fastmcp>=2.12.2",
    "httpx>=0.27.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]
